--- a/Nauktion/Nauktion.csproj
+++ b/Nauktion/Nauktion.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="10.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
