Added Identity scaffhold

--- a/Nauktion/appsettings.json
+++ b/Nauktion/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NauktionContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Nauktion;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
