Changed DB connection string

--- a/Nauktion/appsettings.json
+++ b/Nauktion/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NauktionContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Nauktion;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "NauktionContextConnection": "Server=.;Database=Nauktion;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
