--- a/Nauktion/appsettings.json
+++ b/Nauktion/appsettings.json
@@ -7,5 +7,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NauktionContextConnection": "Server=.;Database=Nauktion;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "NackowskisGruppkod":  1170
 }
