Fighting with authentication Main villain was the AddDefaultIdentity in the IdentityHostingStartup https://github.com/aspnet/Identity/issues/1813#issuecomment-394455842

--- a/Nauktion/Properties/launchSettings.json
+++ b/Nauktion/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": true, 
-    "anonymousAuthentication": false, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:58569",
       "sslPort": 44315
