Refractored auktion handling over to admin controller

--- a/Nauktion/Nauktion.csproj
+++ b/Nauktion/Nauktion.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Auktion\Alter.cshtml">
+    <Content Update="Views\Admin\Alter.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Shared\_LayoutWithHeader.cshtml">
